попытка настроить конфиг сервер №999